--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-slick": "^0.29.0"
   },
   "devDependencies": {
     "eslint": "8.15.0",
